Teil A - Struktur einer Webanwendung mit HTML5 erstellen -Add Input elements in the Tagging and Discovery Widgets -Add id Attributes for fields -Add labels for all fields -Add fieldset and legend for line around Tagging and Discovery forms -Add Submit and Apply Buttons -Add placeholder for certain fields
-> Add rules
-Add required rule for all of the fields in Tagging except hashtag
-Add maxlength to name, which is 10 letters
-Add pattern for hashtag to start with a # and set maxlength to 11 letters

--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -32,20 +32,20 @@
 							<h3>Enter new GeoTag</h3>
 						</legend>
 
-						<label for="fname">latitude</label>
+						<label for="latitude">latitude</label>
 						<br>
 						<input type="text" id="latitude" name="latitude" pattern="[0-9]" required>
 						<br>
-						<label for="fname">logitude</label>
+						<label for="longitude">logitude</label>
 						<br>
 						<input type="text" id="longitude" name="longitude" pattern="[0-9]" required>
 						<br>
-						<label for="fname">name</label>
+						<label for="name">name</label>
 						<br>
 						<input type="text" id="name" name="name" placeholder="some name" pattern="[a-z]" maxlength="10"
 							   required>
 						<br>
-						<label for="fname">hashtag</label>
+						<label for="hashtag">hashtag</label>
 						<br>
 						<input type="text" id="hashtag" name="hashtag" placeholder="# + max. 10 letters"
 							   pattern="#[a-z]" maxlength="11">
