Teil B - Webanwendung mit CSS3 und Bootstrap gestalten index.html - delete <br> - add <div> class for Flexbox capabilities
Style.css
- add flexbox grid
- add media queries
- add color the header and footer
- add vertical grid layout for the Tagging widget
- add bigger boxes in all input fields
- add color boxes around the Discovery results

--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -33,25 +33,18 @@
 						</legend>
 
 						<label for="latitude">latitude</label>
-						<br>
 						<input type="text" id="latitude" name="latitude" pattern="[0-9]" required>
-						<br>
 						<label for="longitude">logitude</label>
-						<br>
 						<input type="text" id="longitude" name="longitude" pattern="[0-9]" required>
-						<br>
 						<label for="name">name</label>
-						<br>
 						<input type="text" id="name" name="name" placeholder="some name" pattern="[a-z]" maxlength="10"
 							   required>
-						<br>
 						<label for="hashtag">hashtag</label>
-						<br>
 						<input type="text" id="hashtag" name="hashtag" placeholder="# + max. 10 letters"
 							   pattern="#[a-z]" maxlength="11">
-						<br>
-						<br>
+						<div class="button">
 						<input type="submit" value="Submit">
+						</div>
 					</fieldset>
 				</form>
 				<!-- ############### Aufgabe1a Form1 Ende -->
@@ -72,7 +65,7 @@
 					</fieldset>
 				</form>
 				<!-- ############### Aufgabe1a Form2 Ende -->
-
+				<div class="mapresults">
 				<div class="taglist">
 					<ul id="results">
 						<li>Castle (49.01379, 8.404435) #sight</li>
@@ -84,13 +77,13 @@
 					<img id="result-img" src="./images/mapview.jpg" alt="a map with locations"/>
 					<div class="caption">Result map</div>
 				</div>
-
+				</div>
 			</section>
 
 		</main>
 
 		<footer>
-			<span>2017 by LKIT</span>
+			<span>2018/19 by LKIT</span>
 		</footer>
 
 	</body>
