--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -33,15 +33,15 @@
 						</legend>
 
 						<label for="latitude">latitude</label>
-						<input type="text" id="latitude" name="latitude" pattern="[0-9]" required>
+						<input type="text" id="latitude" name="latitude" pattern="[0-9]+\.[0-9]+" required>
 						<label for="longitude">logitude</label>
-						<input type="text" id="longitude" name="longitude" pattern="[0-9]" required>
+						<input type="text" id="longitude" name="longitude" pattern="[0-9]+\.[0-9]+" required>
 						<label for="name">name</label>
-						<input type="text" id="name" name="name" placeholder="some name" pattern="[a-z]" maxlength="10"
+						<input type="text" id="name" name="name" placeholder="some name" pattern="[\w ]+" maxlength="10"
 							   required>
 						<label for="hashtag">hashtag</label>
 						<input type="text" id="hashtag" name="hashtag" placeholder="# + max. 10 letters"
-							   pattern="#[a-z]" maxlength="11">
+							   pattern="#\w+" maxlength="11">
 						<div class="button">
 						<input type="submit" value="Submit">
 						</div>
@@ -61,6 +61,8 @@
 							<h3>Filter by Search Term</h3>
 						</legend>
 						<input type="text" id="search" name="search" placeholder="search term">
+						<input type="hidden" id="filter-latitude" name="latitude">
+						<input type="hidden" id="filter-longitude" name="longitude">
 						<input type="submit" value="Apply">
 					</fieldset>
 				</form>
